src/ResourceList.scss
$browser-context: 16;

@function em($pixels, $context: $browser-context) {
  @if (unitless($pixels)) {
    $pixels: $pixels * 1px;
  }

  @if (unitless($context)) {
    $context: $context * 1px;
  }

  @return $pixels / $context * 1em;
}

@mixin addStates($textColor, $activeColor, $useUnderline: false ) {
  color: $textColor;
  text-decoration: none;

  @if($useUnderline){
    &:hover {
      text-decoration: underline;
      color: $textColor;
    }
  }

  &:active {
    color: $activeColor;
  }
}

$bgColor: #fff;
$textColor: #2070e3;
$activeColor: #1d53b8;
$borderRadius: 5px;

.h5p-resource-list-wrapper {
  &.h5p-medium-tablet-size .h5p-resource-list-container,
  &.h5p-large-tablet-size .h5p-resource-list-container,
  &.h5p-large-size .h5p-resource-list-container
  {
    .h5p-resource-list-element {
      div {
        flex-direction: row-reverse;
      }

      .h5p-resource-list-introduction-image {
        max-width: em(90px);
        margin-left: 0.8rem;
        align-self: flex-start;
      }
    }

    .h5p-resource-list {
      margin: 0;
      padding: 0 10%;
    }
  }

  &.h5p-medium-tablet-size .h5p-resource-list-container {
    width: 60%;
  }

  &.h5p-large-size .h5p-resource-list-container,
  &.h5p-large-tablet-size .h5p-resource-list-container {
    width: 40%;
  }
}

.h5p-resource-list-bg {
  opacity: 0;
  transition: opacity 250ms;
  background-color: black;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  visibility: hidden;
  z-index: 9;
}

.h5p-resource-list-container {
  width: 95%;
  right: 0;
  top: 0;
  bottom: 0;
  position: absolute;
  background-color: $bgColor;
  z-index: 10;
  background-size: cover;
  display: flex;
  flex-direction: column;
  overflow: hidden;
  transform: translateX(100%);
}

.h5p-resource-list {
  list-style: none;
  overflow-y: auto;
  margin: 0;
  padding: 0 4%;
}

.h5p-resource-list-element {
  padding-bottom: 1.2rem;

  a {
    @include addStates($textColor, $activeColor);
  }

  h2 {
    margin: 1rem 0 0 0;
    font-size: 1rem;
    @include addStates($textColor, $activeColor, true);
  }

  div {
    display: flex;
    flex-direction: column;
    margin-top: 1rem;
  }

  p {
    color: initial;
    line-height: em(28px);
    font-size: 0.9rem;
    margin: 0;
    flex: auto;
  }

  &:not(:last-child) {
    border-bottom: 1px solid rgba(37,59,115,0.1);
  }
}

.h5p-resource-list-introduction-image {
  max-width: 100%;
  align-self: center;
  margin-bottom: 1rem;
}

.h5p-resource-list-header {
  display: flex;
  align-items: center;
  box-shadow: 0 0.3125em 0.3125em rgba(0, 0, 0, 0.06);
  min-height: em(64px);
  padding: 0.5rem 1rem;

  h1 {
    margin-left: 0.6rem;
    font-size: 1.4rem;
  }

  & > img {
    height: auto;
  }
}

.h5p-resource-list-link {
  display: inline-flex;
  border: 1px solid #dbe2e8;
  padding: 0.25rem 0.5rem;
  border-radius: $borderRadius;
  margin-top: 1rem;
  align-items: center;
  font-size: 0.875rem;

  span{
    margin-left: 0.5rem;
  }

  &:hover,
  &:focus {
    background-color: #ebf0ff;
  }

  &:active {
    border-color: $activeColor;
    background-color: #ebf0ff;
  }
}

.h5p-resource-list-hide {
  cursor: pointer;
  display: inline-flex;
  margin-left: auto;
  color: $textColor;
  background-color: transparent;
  border: 0;
  align-items: center;

  &:hover,
  &:active,
  &:focus {
    color: $textColor;
  }

  #hideButton {
    font-size: 0.875rem;
    @include addStates($textColor, $activeColor, true);
  }

  .fa {
    margin-left: 0.25rem;
    font-size: 1.5rem;
  }
}

.h5p-resource-list-active .h5p-resource-list-bg {
  opacity: 0.8;
  visibility: visible;
}

.slide-in {
  animation: slide-in 0.5s forwards;
  -webkit-animation: slide-in 0.5s forwards;
}

.slide-out {
  animation: slide-out 0.5s forwards;
  -webkit-animation: slide-out 0.5s forwards;
}

@keyframes slide-in {
  from { transform: translateX(100%); }
  to { transform: translateX(0); }
}

@-webkit-keyframes slide-in {
  from { transform: translateX(100%); }
  to { transform: translateX(0); }
}

@keyframes slide-out {
  from { transform: translateX(0); }
  to { transform: translateX(100%); }
}

@-webkit-keyframes slide-out {
  from { transform: translateX(0); }
  to { transform: translateX(100%); }
}

.h5p-resource-list-button {
  border-radius: $borderRadius;
  padding: 0.2rem;
  border: 1px solid #dbe2e8;
  background-color: #ffffff;

  &:hover {
    border-color: #2071e3;
  }

  &:active {
    border-color: #1d53b8;
  }

  div {
    display: flex;
    align-items: center;
    border-radius: inherit;
    padding: 0.25rem 0.3125rem;
    background-color: rgba(219,226,232,0.25);
    background-size: cover;
    flex-wrap: nowrap;

    &:hover {
      background-color: inherit;
    }

    &:active {
      background-color: #ebf0ff;
    }
  }

  span {
    font-weight: bold;
    margin-left: 0.925rem;
  }

  img {
    width: em(26px);
  }
}

